Port F3NPerm to PacketEvents for Paper 1.21.11